# checkon

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
ci/: appveyor-download.py
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: checkon.rst  index.rst
src/checkon/: __main__.py  app.py  cli.py  results.py  satests.py  tests.py  tox.py
src/checkon/scripts/checkon_trial/: setup.py
src/checkon/scripts/checkon_trial/checkon_trial/: checkon_trial.py
tests/: test_checkon.py
